pig_1546051042839.log
Pig Stack Trace
---------------
ERROR 1121: Python Error.   File "difference.py", line 42
    if (first_value!=0) and (last_value!=0) and (first_value!=last_value) and
                                                                            ^
SyntaxError: no viable alternative at input '\n'

org.apache.pig.backend.executionengine.ExecException: ERROR 1121: Python Error.   File "difference.py", line 42
    if (first_value!=0) and (last_value!=0) and (first_value!=last_value) and
                                                                            ^
SyntaxError: no viable alternative at input '\n'

	at org.apache.pig.scripting.jython.JythonScriptEngine$Interpreter.execfile(JythonScriptEngine.java:249)
	at org.apache.pig.scripting.jython.JythonScriptEngine$Interpreter.init(JythonScriptEngine.java:163)
	at org.apache.pig.scripting.jython.JythonScriptEngine.registerFunctions(JythonScriptEngine.java:344)
	at org.apache.pig.PigServer.registerCode(PigServer.java:572)
	at org.apache.pig.tools.grunt.GruntParser.processRegister(GruntParser.java:476)
	at org.apache.pig.tools.pigscript.parser.PigScriptParser.parse(PigScriptParser.java:546)
	at org.apache.pig.tools.grunt.GruntParser.parseStopOnError(GruntParser.java:198)
	at org.apache.pig.tools.grunt.GruntParser.parseStopOnError(GruntParser.java:173)
	at org.apache.pig.tools.grunt.Grunt.exec(Grunt.java:84)
	at org.apache.pig.Main.run(Main.java:613)
	at org.apache.pig.Main.main(Main.java:158)
	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
	at java.lang.reflect.Method.invoke(Method.java:498)
	at org.apache.hadoop.util.RunJar.run(RunJar.java:226)
	at org.apache.hadoop.util.RunJar.main(RunJar.java:141)
Caused by:   File "difference.py", line 42
    if (first_value!=0) and (last_value!=0) and (first_value!=last_value) and
                                                                            ^
SyntaxError: no viable alternative at input '\n'

	at org.python.core.ParserFacade.fixParseError(ParserFacade.java:92)
	at org.python.core.ParserFacade.parse(ParserFacade.java:184)
	at org.python.core.Py.compile_flags(Py.java:1731)
	at org.python.util.PythonInterpreter.execfile(PythonInterpreter.java:235)
	at org.apache.pig.scripting.jython.JythonScriptEngine$Interpreter.execfile(JythonScriptEngine.java:217)
	... 16 more
================================================================================
